force-app/main/default/objects/Anonymization_Audit_Log__c/Anonymization_Audit_Log__c.object-meta.xml
<CustomObject>
    <label>Anonymization Audit Log</label>
    <nameField>
        <displayFormat>ANON-{0000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Anonymization Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>