force-app/main/default/objects/Anonymization_Audit_Log__c/fields/Fields_Anonymized__c.field-meta.xml
<CustomField>
    <fullName>Fields_Anonymized__c</fullName>
    <label>Fields Anonymized</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>