force-app/main/default/objects/Anonymization_Audit_Log__c/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <label>Async Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>