force-app/main/default/objects/Anonymization_Audit_Log__c/fields/Triggered_By__c.field-meta.xml
<CustomField>
    <fullName>Triggered_By__c</fullName>
    <label>Triggered By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Anonymization Audit Logs</relationshipLabel>
    <relationshipName>Anonymization_Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>